--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return trips['pickup_latitude'],trips[pickup_lo]\n",
+    "    return trips['pickup_latitude'],trips[pickup_longitude],trips\n",
     "    pass"
    ]
   },
