--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "def parse_trips(trips):\n",
     "    return trips[trips]['pickup_latitude']\n",
-    "    return trip\n",
+    "    return trips[trips]['']\n",
     "    pass"
    ]
   },
