Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,8 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return trips[trips]['pickup_latitude']\n",
-    "    return trips[trips]['pickup_longitude']\n",
+    "    return trips['pickup_latitude']\n",
+    "    return trips['pickup_longitude']\n",
     "    return trips[trips]['trip_distance']\n",
     "    pass"
    ]
