Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trips=()\n",
     "def parse_trips(trips):\n",
     "    return trips['pickup_latitude']\n",
     "    return trips['pickup_longitude']\n",
