Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "trips=()\n",
     "def parse_trips(trips):\n",
-    "    return trips['pickup_latitude']\n",
+    "    return trips.append trips['pickup_latitude']\n",
     "    return trips['pickup_longitude']\n",
     "    return trips['trip_distance']\n",
     "    pass"
