--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     "trips=()\n",
     "def parse_trips(trips):\n",
     "    return trips.append(trips['pickup_latitude'])\n",
-    "    return trips['pickup_longitude']\n",
+    "    return trips.append(trips['pickup_longitude']\n",
     "    return trips['trip_distance']\n",
     "    pass"
    ]
