Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "trips=()\n",
     "def parse_trips(trips):\n",
-    "    return trips.append(trips['pickup_latitude'])\n",
+    "    trips.append(trips['pickup_latitude'])\n",
     " trips.append(trips['pickup_longitude']) trips.append(trips['trip_distance'])\n",
     "    pass"
    ]
