--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,16 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{'trip_distance': '18.379999999999999',\n",
+       " 'pickup_latitude': '40.64499',\n",
+       " 'pickup_longitude': '-73.781149999999997'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
