--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    return trip['pickup_latitude'],trip['']\n",
+    "    return trip['pickup_latitude'],trip['pickup_l']\n",
     "    pass"
    ]
   },
