--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return folium.CircleMarker(location = [trip['pickup_latitude'],tr)\n",
+    "    return folium.CircleMarker(location,radius=6)\n",
     "    pass"
    ]
   },
