--- a/index.ipynb
+++ b/index.ipynb
@@ -621,7 +621,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    return folium.Map\n",
+    "    return folium.Map(location=location, zoo)\n",
     "    pass"
    ]
   },
